// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DescriptionList > renders with as correctly 1`] = `
"<div class="w-full shrink-0" as="section">
  <!--v-if-->
  <!--v-if-->
  <dl class="grid grid-cols-1 sm:grid-cols-[min(50%,theme(spacing.80))_auto] mt-3 text-lg"></dl>
  <!--v-if-->
</div>"
`;

exports[`DescriptionList > renders with b24ui correctly 1`] = `
"<div class="w-full shrink-0">
  <!--v-if-->
  <!--v-if-->
  <dl class="grid grid-cols-1 sm:grid-cols-[min(50%,theme(spacing.80))_auto] mt-3 text-lg"></dl>
  <!--v-if-->
</div>"
`;

exports[`DescriptionList > renders with class correctly 1`] = `
"<div class="w-full shrink-0">
  <!--v-if-->
  <!--v-if-->
  <dl class="grid grid-cols-1 sm:grid-cols-[min(50%,theme(spacing.80))_auto] mt-3 text-lg"></dl>
  <!--v-if-->
</div>"
`;

exports[`DescriptionList > renders with default slot correctly 1`] = `
"<div class="w-full shrink-0">
  <!--v-if-->
  <!--v-if-->
  <dl class="grid grid-cols-1 sm:grid-cols-[min(50%,theme(spacing.80))_auto] mt-3 text-lg"></dl>
  <!--v-if-->
</div>"
`;
